--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "phonyland/generator-template",
-    "description": "\ud83d\udd39 Generator Template for \ud83d\ude43 Phony Framework",
+    "name": "phonyland/phony-generator-coin",
+    "description": "Coin Generator for \ud83d\ude43 Phony Framework",
     "license": "MIT",
     "type": "phony-generator",
     "keywords": [
@@ -9,10 +9,7 @@
         "phony",
         "random",
         "faker",
-        "ngram",
-        "seeding",
-        "generator",
-        "template"
+        "coin"
     ],
     "authors": [
         {
@@ -32,12 +29,12 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Phonyland\\SampleGenerator\\": "src/"
+            "Phonyland\\CoinGenerator\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Phonyland\\SampleGenerator\\Tests\\": "tests"
+            "Phonyland\\CoinGenerator\\Tests\\": "tests"
         }
     },
     "config": {
@@ -54,7 +51,7 @@
     "extra": {
         "phonyland": {
             "generators": [
-                "Phonyland\\SampleGenerator\\ExampleGenerator"
+                "Phonyland\\CoinGenerator\\CoinGenerator"
             ]
         }
     },
