composer.json: Require `phonyland/phony-generator-number` instead of `phonyland/framework`

--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,12 @@
     ],
     "require": {
         "php": "^8.0",
-        "phonyland/framework": "dev-master",
-        "phonyland/generator-manager": "dev-master"
+        "phonyland/generator-manager": "dev-master",
+        "phonyland/phony-generator-number": "dev-master"
     },
     "require-dev": {
-        "phonyland/dev-tools": "dev-master"
+        "phonyland/dev-tools": "dev-master",
+        "phonyland/framework": "dev-master"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
